# Relacon-SW

./: .gitignore  CMakeLists.txt  README.md
include/: Relacon.h
src/: Backend.h  BackendHidapi.c  BackendLibusb.c  DeviceCapabilities.c  DeviceCapabilities.h  Log.c  Log.h  Relacon.c  relacon-cli.c
udev/: 99-relacon.rules
